@@ -9,8 +9,8 @@
     <version>0.0.3</version>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <lwjgl-version>3.3.3</lwjgl-version>
@@ -89,9 +89,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>22</source>
+                    <target>22</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -189,7 +188,7 @@
                 <dependency>
                     <groupId>io.github.spair</groupId>
                     <artifactId>imgui-java-natives-linux</artifactId>
-                    <version>1.87.0</version>
+                    <version>${imgui-version}</version>
                 </dependency>
 
             </dependencies>
@@ -236,7 +235,7 @@
                 <dependency>
                     <groupId>io.github.spair</groupId>
                     <artifactId>imgui-java-natives-macos</artifactId>
-                    <version>1.87.0</version>
+                    <version>${imgui-version}</version>
                 </dependency>
             </dependencies>
         </profile>
